# llm-twin

./: DPO_TRAINING_GUIDE.md  ETL_PIPELINE_GUIDE.md  Modelfile  README.md  STRUCTURE.md  main.py  pyproject.toml  requirements-dpo-mac.txt  requirements-dpo.txt  requirements-unsloth.txt  requirements.txt  run_feature_engineering.py  run_zenml_pipeline.py  setup.py
.zen/: config.yaml
configs/: digital_data_etl_ronel_solomon.yaml  dpo_config.yaml  feature_engineering.yaml  hybrid_vector_store.yaml
data/: Profile.md  articles.json  linkedin_raw_text.txt  linkedin_structured_data.json  users.json
debug/: debug_profile_page.html  linkedin_profile_debug.html
docs/: ENHANCED_LINKEDIN_GUIDE.md  HYBRID_VECTOR_STORE_GUIDE.md  LINKEDIN_CRAWLER_FINAL_GUIDE.md  LINKEDIN_CRAWLER_USAGE.md  MEDIUM_CRAWLER_README.md  OLLAMA_FINE_TUNING_GUIDE.md  UNSLOOTH_FINE_TUNING_GUIDE.md
examples/: ingestion_example.py
scripts/: cache_manager.py  convert_linkedin_to_json.py  create_instruction_pairs.py  create_preference_dataset.py  data_warehouse_pipeline.py  debug_linkedin_page.py  dpo_fine_tuning.py  dpo_fine_tuning_mac.py  enhanced_digital_data_etl.py  export_ollama_to_hf.py  extract_instruction_pairs.py  final.py  inference_pipeline.py  instruction_pairs_fine_tuning.py  linkedin_auth_guide.py  linkedin_data_summary.py  linkedin_feed_demo.py  medium_fallback.py  ollama_fine_tuning_pipeline.py  process_profile_pdf.py  process_raw_documents.py  run_data_ingestion.py  run_dpo_pipeline.py  simple_data_ingestion.py  simple_web_crawling.py  standalone_data_extractor.py  test_dpo_model.py  test_inference.py  (+4 more)
(+56 files in other folders)
